Basic admin console component and basic styling

--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,3 +1,25 @@
-<p>
-  login works!
-</p>
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">DeviceHive</a>
+</nav>
+
+<div class="container">
+  <div class="row align-items-center justify-content-center">
+    <form class="col-6">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Login</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter login">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter password">
+      </div>
+      <button class="btn btn-primary" (click)="login()">Log in</button>
+    </form>
+  </div>
+</div>
+
+<nav class="navbar fixed-bottom navbar-expand navbar-light bg-light">
+  <div class="navbar-text m-auto">
+    Developed by DataArt Solutions 2012-2018
+  </div>
+</nav>
