Added layout for main sections

--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -1,3 +1,45 @@
-<p>
-  devices works!
-</p>
+<div class="container">
+  <table class="table">
+    <thead class="thead-light">
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Network</th>
+      <th scope="col">Device Type</th>
+      <th scope="col">Operation</th>
+      <th scope="col">Data</th>
+      <th scope="col">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+      <td>alexa-device-1</td>
+      <td>alexa-network</td>
+      <td>Default Device Type</td>
+      <td>Normal</td>
+      <td>empty</td>
+      <td>
+        <button class="btn btn-info btn-sm">Details</button>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+
+    <tr>
+      <td>alexa-device-1</td>
+      <td>alexa-network</td>
+      <td>Default Device Type</td>
+      <td>Normal</td>
+      <td>empty</td>
+      <td>
+        <button class="btn btn-info btn-sm">Details</button>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <button class="btn btn-success float-right">Add new device</button>
+</div>
+
