--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -1,3 +1,33 @@
-<p>
-  networks works!
-</p>
+<div class="container">
+  <table class="table">
+    <thead class="thead-light">
+    <tr>
+      <th scope="col">Network</th>
+      <th scope="col">Description</th>
+      <th scope="col">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+      <td>alexa-network</td>
+      <td>Network for Alexa Demo</td>
+      <td>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+
+    <tr>
+      <td>alexa-network</td>
+      <td>Network for Alexa Demo</td>
+      <td>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <button class="btn btn-success float-right">Add new network</button>
+</div>
