--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,3 +1,42 @@
-<p>
-  users works!
-</p>
+<div class="container">
+  <table class="table">
+    <thead class="thead-light">
+      <tr>
+        <th scope="col">Login</th>
+        <th scope="col">Role</th>
+        <th scope="col">Status</th>
+        <th scope="col">Last Login</th>
+        <th scope="col">Data</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr>
+        <td>Admin</td>
+        <td>Administrator</td>
+        <td>Active</td>
+        <td>06/15/2017 13:22:53</td>
+        <td>empty</td>
+        <td>
+          <button class="btn btn-primary btn-sm">Edit</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
+
+      <tr>
+        <td>Admin</td>
+        <td>Administrator</td>
+        <td>Active</td>
+        <td>06/15/2017 13:22:53</td>
+        <td>empty</td>
+        <td>
+          <button class="btn btn-primary btn-sm">Edit</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <button class="btn btn-success float-right">Add new user</button>
+</div>
