--- a/src/app/admin/device-types/device-types.component.html
+++ b/src/app/admin/device-types/device-types.component.html
@@ -1,3 +1,34 @@
-<p>
-  device-types works!
-</p>
+<div class="container">
+  <table class="table">
+    <thead class="thead-light">
+    <tr>
+      <th scope="col">Device Type</th>
+      <th scope="col">Description</th>
+      <th scope="col">Actions</th>
+    </tr>
+    </thead>
+
+    <tbody>
+    <tr>
+      <td>Thermostats</td>
+      <td>Devices to control thermostat settings and to report current temperatures</td>
+      <td>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Thermostats</td>
+      <td>Devices to control thermostat settings and to report current temperatures</td>
+      <td>
+        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+
+  <button class="btn btn-success float-right">Add new device type</button>
+</div>
+
