--- a/src/app/admin/jwt-tokens/jwt-tokens.component.html
+++ b/src/app/admin/jwt-tokens/jwt-tokens.component.html
@@ -1,3 +1,4 @@
-<p>
-  jwt-tokens works!
-</p>
+<div class="container">
+  <button class="btn btn-primary">Set expiration date</button>
+  <button class="btn btn-primary">Create tokens</button>
+</div>
