--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,42 +1,60 @@
 <div class="container">
   <table class="table">
     <thead class="thead-light">
-      <tr>
-        <th scope="col">Login</th>
-        <th scope="col">Role</th>
-        <th scope="col">Status</th>
-        <th scope="col">Last Login</th>
-        <th scope="col">Data</th>
-        <th scope="col">Actions</th>
-      </tr>
+    <tr>
+      <th scope="col">Login</th>
+      <th scope="col">Role</th>
+      <th scope="col">Status</th>
+      <th scope="col">Last Login</th>
+      <th scope="col">Data</th>
+      <th scope="col">Actions</th>
+    </tr>
     </thead>
 
     <tbody>
-      <tr>
-        <td>Admin</td>
-        <td>Administrator</td>
-        <td>Active</td>
-        <td>06/15/2017 13:22:53</td>
-        <td>empty</td>
-        <td>
-          <button class="btn btn-primary btn-sm">Edit</button>
-          <button class="btn btn-danger btn-sm">Delete</button>
-        </td>
-      </tr>
+    <tr>
+      <td>Admin</td>
+      <td>Administrator</td>
+      <td>Active</td>
+      <td>06/15/2017 13:22:53</td>
+      <td>empty</td>
+      <td>
+        <button class="btn btn-primary btn-sm" (click)="editUser()">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
 
-      <tr>
-        <td>Admin</td>
-        <td>Administrator</td>
-        <td>Active</td>
-        <td>06/15/2017 13:22:53</td>
-        <td>empty</td>
-        <td>
-          <button class="btn btn-primary btn-sm">Edit</button>
-          <button class="btn btn-danger btn-sm">Delete</button>
-        </td>
-      </tr>
+    <tr>
+      <td>Admin</td>
+      <td>Administrator</td>
+      <td>Active</td>
+      <td>06/15/2017 13:22:53</td>
+      <td>empty</td>
+      <td>
+        <button class="btn btn-primary btn-sm" (click)="editUser()">Edit</button>
+        <button class="btn btn-danger btn-sm">Delete</button>
+      </td>
+    </tr>
     </tbody>
   </table>
 
-  <button class="btn btn-success float-right">Add new user</button>
+  <button class="btn btn-success float-right" (click)="openNewUserModal(newUserModal)">Add new user</button>
 </div>
+
+<ng-template #newUserModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Create new user</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <dh-user-details></dh-user-details>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="c('Save')">Save</button>
+  </div>
+</ng-template>
