--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -1,33 +1,69 @@
 <div class="container">
   <table class="table">
     <thead class="thead-light">
-    <tr>
-      <th scope="col">Network</th>
-      <th scope="col">Description</th>
-      <th scope="col">Actions</th>
-    </tr>
+      <tr>
+        <th scope="col">Network</th>
+        <th scope="col">Description</th>
+        <th scope="col">Actions</th>
+      </tr>
     </thead>
 
     <tbody>
-    <tr>
-      <td>alexa-network</td>
-      <td>Network for Alexa Demo</td>
-      <td>
-        <button class="btn btn-primary btn-sm">Edit</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
+      <tr>
+        <td>alexa-network</td>
+        <td>Network for Alexa Demo</td>
+        <td>
+          <button class="btn btn-primary btn-sm" (click)="openEditNetworkModal(editNetworkModal)">Edit</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
 
-    <tr>
-      <td>alexa-network</td>
-      <td>Network for Alexa Demo</td>
-      <td>
-        <button class="btn btn-primary btn-sm">Edit</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
+      <tr>
+        <td>alexa-network</td>
+        <td>Network for Alexa Demo</td>
+        <td>
+          <button class="btn btn-primary btn-sm" (click)="openEditNetworkModal(editNetworkModal)">Edit</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
     </tbody>
   </table>
 
-  <button class="btn btn-success float-right">Add new network</button>
+  <button class="btn btn-success float-right" (click)="openNewNetworkModal(newNetworkModal)">Add new network</button>
 </div>
+
+<ng-template #newNetworkModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Create new network</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <dh-network-details></dh-network-details>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="c('Save')">Save</button>
+  </div>
+</ng-template>
+
+<ng-template #editNetworkModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Network</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <dh-network-details></dh-network-details>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="c('Save')">Save</button>
+  </div>
+</ng-template>
