--- a/src/app/admin/device-types/device-types.component.html
+++ b/src/app/admin/device-types/device-types.component.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="modal-body">
-    <dh-device-type-details></dh-device-type-details>
+    <dh-device-type></dh-device-type>
   </div>
 
   <div class="modal-footer">
@@ -59,7 +59,7 @@
   </div>
 
   <div class="modal-body">
-    <dh-device-type-details></dh-device-type-details>
+    <dh-device-type></dh-device-type>
   </div>
 
   <div class="modal-footer">
