--- a/src/app/admin/networks/networks.component.html
+++ b/src/app/admin/networks/networks.component.html
@@ -41,7 +41,7 @@
   </div>
 
   <div class="modal-body">
-    <dh-network-details></dh-network-details>
+    <dh-network></dh-network>
   </div>
 
   <div class="modal-footer">
@@ -59,7 +59,7 @@
   </div>
 
   <div class="modal-body">
-    <dh-network-details></dh-network-details>
+    <dh-network></dh-network>
   </div>
 
   <div class="modal-footer">
