--- a/src/app/admin/users/user-details/user-detail.component.html
+++ b/src/app/admin/users/user-details/user-detail.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <dh-user-details></dh-user-details>
+  <dh-user></dh-user>
 
   <ngb-tabset type="pills">
     <ngb-tab title="Networks">
