--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -19,7 +19,7 @@
       <td>06/15/2017 13:22:53</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-primary btn-sm" (click)="editUser()">Edit</button>
+        <button class="btn btn-info btn-sm" (click)="openUserDetails()">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
@@ -31,7 +31,7 @@
       <td>06/15/2017 13:22:53</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-primary btn-sm" (click)="editUser()">Edit</button>
+        <button class="btn btn-info btn-sm" (click)="openUserDetails()">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
@@ -50,7 +50,7 @@
   </div>
 
   <div class="modal-body">
-    <dh-user-details></dh-user-details>
+    <dh-user></dh-user>
   </div>
 
   <div class="modal-footer">
