--- a/src/app/admin/users/user-details/user-details.component.html
+++ b/src/app/admin/users/user-details/user-details.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <dh-user></dh-user>
 
+  <button class="btn btn-success">Save</button>
+
   <ngb-tabset type="pills">
     <ngb-tab title="Networks">
       <ng-template ngbTabContent>
