Added components for creating and editing devices

--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -19,8 +19,7 @@
       <td>Normal</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-info btn-sm">Details</button>
-        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-info btn-sm" (click)="openDeviceDetails()">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
@@ -32,14 +31,30 @@
       <td>Normal</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-info btn-sm">Details</button>
-        <button class="btn btn-primary btn-sm">Edit</button>
+        <button class="btn btn-info btn-sm" (click)="openDeviceDetails()">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
     </tbody>
   </table>
 
-  <button class="btn btn-success float-right">Add new device</button>
+  <button class="btn btn-success float-right" (click)="openNewDeviceModal(newDeviceModal)">Add new device</button>
 </div>
 
+<ng-template #newDeviceModal let-c="close" let-d="dismiss">
+  <div class="modal-header">
+    <h4 class="modal-title">Create new device</h4>
+    <button type="button" class="close" aria-label="Close" (click)="d('Close')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <dh-device></dh-device>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
+    <button type="button" class="btn btn-success" (click)="c('Save')">Save</button>
+  </div>
+</ng-template>
