--- a/src/app/admin/users/user-details/user-details.component.html
+++ b/src/app/admin/users/user-details/user-details.component.html
@@ -3,7 +3,7 @@
 
   <button class="btn btn-success">Save</button>
 
-  <ngb-tabset type="pills">
+  <ngb-tabset>
     <ngb-tab title="Networks">
       <ng-template ngbTabContent>
         <table class="table">
