Added pagination placeholders

--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -38,6 +38,20 @@
     </tbody>
   </table>
 
+  <nav>
+    <ul class="pagination justify-content-center">
+      <li class="page-item disabled">
+        <a class="page-link" href="#" tabindex="-1">Previous</a>
+      </li>
+      <li class="page-item active"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">Next</a>
+      </li>
+    </ul>
+  </nav>
+
   <button class="btn btn-success float-right" (click)="openNewUserModal(newUserModal)">Add new user</button>
 </div>
 
