--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -19,7 +19,7 @@
       <td>Normal</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-info btn-sm" (click)="openDeviceDetails()">Details</button>
+        <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
@@ -31,7 +31,7 @@
       <td>Normal</td>
       <td>empty</td>
       <td>
-        <button class="btn btn-info btn-sm" (click)="openDeviceDetails()">Details</button>
+        <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
         <button class="btn btn-danger btn-sm">Delete</button>
       </td>
     </tr>
