--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -12,29 +12,17 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td>Admin</td>
-      <td>Administrator</td>
-      <td>Active</td>
-      <td>06/15/2017 13:22:53</td>
-      <td>empty</td>
-      <td>
-        <button class="btn btn-info btn-sm" (click)="openUserDetails()">Details</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
-
-    <tr>
-      <td>Admin</td>
-      <td>Administrator</td>
-      <td>Active</td>
-      <td>06/15/2017 13:22:53</td>
-      <td>empty</td>
-      <td>
-        <button class="btn btn-info btn-sm" (click)="openUserDetails()">Details</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
+      <tr *ngFor="let user of users">
+        <td>{{user.login}}</td>
+        <td>{{userRole[user.role]}}</td>
+        <td>{{userStatus[user.status]}}</td>
+        <td>{{user.lastLogin | date:'medium'}}</td>
+        <td>{{user.data | json}}</td>
+        <td>
+          <button class="btn btn-info btn-sm" (click)="openUserDetails(null)">Details</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
     </tbody>
   </table>
 
