--- a/src/app/admin/device-types/device-types.component.html
+++ b/src/app/admin/device-types/device-types.component.html
@@ -9,23 +9,14 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td>Thermostats</td>
-      <td>Devices to control thermostat settings and to report current temperatures</td>
-      <td>
-        <button class="btn btn-primary btn-sm" (click)="openEditDeviceTypeModal(editDeviceTypeModal)">Edit</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
-
-    <tr>
-      <td>Thermostats</td>
-      <td>Devices to control thermostat settings and to report current temperatures</td>
-      <td>
-        <button class="btn btn-primary btn-sm" (click)="openEditDeviceTypeModal(editDeviceTypeModal)">Edit</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
+      <tr *ngFor="let deviceType of deviceTypes">
+        <td>{{deviceType.name}}</td>
+        <td>{{deviceType.description}}</td>
+        <td>
+          <button class="btn btn-primary btn-sm" (click)="openEditDeviceTypeModal(editDeviceTypeModal)">Edit</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
     </tbody>
   </table>
 
