--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -12,29 +12,17 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td>alexa-device-1</td>
-      <td>alexa-network</td>
-      <td>Default Device Type</td>
-      <td>Normal</td>
-      <td>empty</td>
-      <td>
-        <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
-
-    <tr>
-      <td>alexa-device-1</td>
-      <td>alexa-network</td>
-      <td>Default Device Type</td>
-      <td>Normal</td>
-      <td>empty</td>
-      <td>
-        <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
-        <button class="btn btn-danger btn-sm">Delete</button>
-      </td>
-    </tr>
+      <tr *ngFor="let device of devices">
+        <td>{{device.name}}</td>
+        <td>{{findNetworkNameById(device.networkId)}}</td>
+        <td>{{findDeviceTypeNameById(device.deviceTypeId)}}</td>
+        <td>{{device.blocked ? 'Blocked' : 'Normal'}}</td>
+        <td>{{!!device.data ? (device.data | json) : null}}</td>
+        <td>
+          <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
+          <button class="btn btn-danger btn-sm">Delete</button>
+        </td>
+      </tr>
     </tbody>
   </table>
 
