--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -20,7 +20,7 @@
         <td>{{!!user.data ? (user.data | json) : null}}</td>
         <td>
           <button class="btn btn-info btn-sm" (click)="openUserDetails(null)">Details</button>
-          <button class="btn btn-danger btn-sm">Delete</button>
+          <button class="btn btn-danger btn-sm" (click)="deleteUser(user)">Delete</button>
         </td>
       </tr>
     </tbody>
