--- a/src/app/admin/users/user/user.component.html
+++ b/src/app/admin/users/user/user.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <label for="inputLogin" >Login</label>
+  <label for="inputLogin">Login</label>
   <input type="text" class="form-control" id="inputLogin" placeholder="Login" [(ngModel)]="user.login">
 </div>
 
@@ -31,5 +31,5 @@
 
 <div class="form-group">
   <label for="textAreaData">Data (json)</label>
-  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="user.data"></textarea>
+  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="userDataValue"></textarea>
 </div>
