--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -19,7 +19,7 @@
         <td>{{user.lastLogin | date:'medium'}}</td>
         <td>{{!!user.data ? (user.data | json) : null}}</td>
         <td>
-          <button class="btn btn-info btn-sm" (click)="openUserDetails(null)">Details</button>
+          <button class="btn btn-info btn-sm" (click)="openUserDetails(user)">Details</button>
           <button class="btn btn-danger btn-sm" (click)="deleteUser(user)">Delete</button>
         </td>
       </tr>
