--- a/src/app/admin/device-types/device-type/device-type.component.html
+++ b/src/app/admin/device-types/device-type/device-type.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
   <label for="inputName">Name</label>
-  <input type="text" class="form-control" id="inputName" placeholder="Device type name">
+  <input type="text" class="form-control" id="inputName" placeholder="Device type name" [(ngModel)]="deviceType.name">
 </div>
 
 <div class="form-group">
   <label for="textAreaDescription">Description</label>
-  <textarea class="form-control" id="textAreaDescription" rows="3"></textarea>
+  <textarea class="form-control" id="textAreaDescription" rows="3" [(ngModel)]="deviceType.description"></textarea>
 </div>
