--- a/src/app/admin/networks/network/network.component.html
+++ b/src/app/admin/networks/network/network.component.html
@@ -1,9 +1,9 @@
 <div class="form-group">
   <label for="inputName">Name</label>
-  <input type="text" class="form-control" id="inputName" placeholder="Network name">
+  <input type="text" class="form-control" id="inputName" placeholder="Network name" [(ngModel)]="network.name">
 </div>
 
 <div class="form-group">
   <label for="textAreaDescription">Description</label>
-  <textarea class="form-control" id="textAreaDescription" rows="3"></textarea>
+  <textarea class="form-control" id="textAreaDescription" rows="3" [(ngModel)]="network.description"></textarea>
 </div>
