--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -57,6 +57,6 @@
 
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
-    <button type="button" class="btn btn-success" [disabled]="isCreatingUser" (click)="createUser()">Save</button>
+    <button type="button" class="btn btn-success" [disabled]="isSendingRequest" (click)="createUser()">Save</button>
   </div>
 </ng-template>
