--- a/src/app/admin/devices/device/device.component.html
+++ b/src/app/admin/devices/device/device.component.html
@@ -1,33 +1,31 @@
 <div class="form-group">
   <label for="inputName">Name</label>
-  <input type="text" class="form-control" id="inputName" placeholder="Name">
+  <input type="text" class="form-control" id="inputName" placeholder="Name" [(ngModel)]="device.name">
 </div>
 
 <div class="form-group">
   <label for="inputNetwork">Network</label>
-  <select id="inputNetwork" class="form-control">
-    <option selected>alexa-network</option>
-    <option>some-other-network</option>
+  <select id="inputNetwork" class="form-control" [(ngModel)]="device.networkId">
+    <option *ngFor="let network of networks" [ngValue]="network.id">{{network.name}}</option>
   </select>
 </div>
 
 <div class="form-group">
   <label for="inputDeviceType">Device type</label>
-  <select id="inputDeviceType" class="form-control">
-    <option selected>Thermostats</option>
-    <option>Clocks</option>
+  <select id="inputDeviceType" class="form-control" [(ngModel)]="device.deviceTypeId">
+    <option *ngFor="let deviceType of deviceTypes" [ngValue]="deviceType.id">{{deviceType.name}}</option>
   </select>
 </div>
 
 <div class="form-group">
   <label for="inputOperation">Operation</label>
-  <select id="inputOperation" class="form-control">
-    <option selected>Normal</option>
-    <option>Blocked</option>
+  <select id="inputOperation" class="form-control" [(ngModel)]="device.blocked">
+    <option [ngValue]="false">Normal</option>
+    <option [ngValue]="true">Blocked</option>
   </select>
 </div>
 
 <div class="form-group">
   <label for="textAreaData">Data (json)</label>
-  <textarea class="form-control" id="textAreaData" rows="3"></textarea>
+  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="deviceDataValue"></textarea>
 </div>
