--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -20,7 +20,7 @@
         <td>{{!!device.data ? (device.data | json) : null}}</td>
         <td>
           <button class="btn btn-info btn-sm" (click)="openDeviceDetails(null)">Details</button>
-          <button class="btn btn-danger btn-sm">Delete</button>
+          <button class="btn btn-danger btn-sm" (click)="deleteDevice(device)">Delete</button>
         </td>
       </tr>
     </tbody>
@@ -51,12 +51,12 @@
     </button>
   </div>
 
-  <div class="modal-body">
-    <dh-device></dh-device>
+  <div class="modal-body" *ngIf="newDevice">
+    <dh-device [device]="newDevice" [networks]="networks" [deviceTypes]="deviceTypes"></dh-device>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="c('Save')">Save</button>
+    <button type="button" class="btn btn-success" (click)="createDevice()">Save</button>
   </div>
 </ng-template>
