--- a/src/app/admin/devices/device/device.component.html
+++ b/src/app/admin/devices/device/device.component.html
@@ -19,7 +19,7 @@
 
 <div class="form-group">
   <label for="inputOperation">Operation</label>
-  <select id="inputOperation" class="form-control" [(ngModel)]="device.blocked">
+  <select id="inputOperation" class="form-control" [(ngModel)]="device.isBlocked">
     <option [ngValue]="false">Normal</option>
     <option [ngValue]="true">Blocked</option>
   </select>
