--- a/src/app/admin/devices/device-details/device-details.component.html
+++ b/src/app/admin/devices/device-details/device-details.component.html
@@ -16,7 +16,7 @@
               <th scope="col">Parameters</th>
               <th scope="col">Status</th>
               <th scope="col">Result</th>
-              <th scope="col">Actions</th>
+              <!--<th scope="col">Actions</th>-->
             </tr>
           </thead>
           <tbody>
@@ -26,9 +26,9 @@
               <td>{{!!command.parameters ? (command.parameters | json) : null}}</td>
               <td>{{command.status}}</td>
               <td>{{!!command.result ? (command.result | json) : null}}</td>
-              <td>
-                <button class="btn btn-secondary btn-sm" (click)="refreshCommand(command)">Refresh</button>
-              </td>
+              <!--<td>-->
+                <!--<button class="btn btn-secondary btn-sm" (click)="refreshCommand(command)">Refresh</button>-->
+              <!--</td>-->
             </tr>
           </tbody>
         </table>
@@ -49,7 +49,11 @@
             </tr>
           </thead>
           <tbody>
-          No notifications were sent in the specified time range.
+            <tr *ngFor="let notification of notifications">
+              <td>{{notification.notification}}</td>
+              <td>{{notification.timestamp}}</td>
+              <td>{{!!notification.parameters ? (notification.parameters | json) : null}}</td>
+            </tr>
           </tbody>
         </table>
 
@@ -95,17 +99,17 @@
   <div class="modal-body">
     <div class="form-group">
       <label for="inputNotificationName">Name</label>
-      <input type="text" class="form-control" id="inputNotificationName" placeholder="Name">
+      <input type="text" class="form-control" id="inputNotificationName" placeholder="Name" [(ngModel)]="newNotification.notification">
     </div>
 
     <div class="form-group">
       <label for="textAreaNotificationParameters">Parameters</label>
-      <textarea class="form-control" id="textAreaNotificationParameters" rows="3"></textarea>
+      <textarea class="form-control" id="textAreaNotificationParameters" rows="3" [(ngModel)]="newNotification.parameters"></textarea>
     </div>
   </div>
 
   <div class="modal-footer">
     <button type="button" class="btn btn-outline-dark" (click)="d('Cancel')">Cancel</button>
-    <button type="button" class="btn btn-success" (click)="c('Save')">Send</button>
+    <button type="button" class="btn btn-success" (click)="sendNewNotification()">Send</button>
   </div>
 </ng-template>
