Added option to log out

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -9,7 +9,7 @@
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
-      <a class="nav-link">Log Out</a>
+      <a class="nav-link" (click)="logOut()">Log Out</a>
     </li>
   </ul>
 </nav>
