--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-lg">
+<nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <a class="navbar-brand" href="#">DeviceHive</a>
   <ul class="navbar-nav">
     <li class="nav-item"><a class="nav-link" routerLinkActive="active" routerLink="users">Users</a></li>
