--- a/src/app/admin/devices/devices.component.html
+++ b/src/app/admin/devices/devices.component.html
@@ -1,21 +1,22 @@
 <div class="container">
-  <table class="table">
-    <thead class="thead-light">
-    <tr>
-      <th scope="col">Name</th>
-      <th scope="col">Network</th>
-      <th scope="col">Device Type</th>
-      <th scope="col">Operation</th>
-      <th scope="col">Data</th>
-      <th scope="col">Actions</th>
-    </tr>
-    </thead>
+  <div class="table-container">
+    <table class="table">
+      <thead class="thead-light">
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Network</th>
+        <th scope="col">Device Type</th>
+        <th scope="col">Operation</th>
+        <th scope="col">Data</th>
+        <th scope="col" class="actions-column">Actions</th>
+      </tr>
+      </thead>
 
-    <tbody>
+      <tbody>
       <tr *ngFor="let device of devices">
-        <td>{{device.name}}</td>
-        <td>{{findNetworkNameById(device.networkId)}}</td>
-        <td>{{findDeviceTypeNameById(device.deviceTypeId)}}</td>
+        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="device.name">{{device.name}}</td>
+        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="findNetworkNameById(device.networkId)">{{findNetworkNameById(device.networkId)}}</td>
+        <td class="text-truncate" placement="bottom" data-container="body" [ngbTooltip]="findDeviceTypeNameById(device.deviceTypeId)">{{findDeviceTypeNameById(device.deviceTypeId)}}</td>
         <td>{{device.isBlocked ? 'Blocked' : 'Normal'}}</td>
         <td>{{!!device.data ? (device.data | json) : null}}</td>
         <td>
@@ -23,8 +24,9 @@
           <button class="btn btn-danger btn-sm" (click)="deleteDevice(device)">Delete</button>
         </td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 
   <!--<nav>-->
     <!--<ul class="pagination justify-content-center">-->
@@ -40,7 +42,7 @@
     <!--</ul>-->
   <!--</nav>-->
 
-  <button class="btn btn-success float-right" (click)="openNewDeviceModal(newDeviceModal)">Add new device</button>
+  <button class="btn btn-success float-right btn-add" (click)="openNewDeviceModal(newDeviceModal)">Add new device</button>
 </div>
 
 <ng-template #newDeviceModal let-c="close" let-d="dismiss">
