--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,19 +1,20 @@
 <div class="container">
-  <table class="table">
-    <thead class="thead-light">
-    <tr>
-      <th scope="col">Login</th>
-      <th scope="col">Role</th>
-      <th scope="col">Status</th>
-      <th scope="col">Last Login</th>
-      <th scope="col">Data</th>
-      <th scope="col">Actions</th>
-    </tr>
-    </thead>
+  <div class="table-container">
+    <table class="table">
+      <thead class="thead-light">
+      <tr>
+        <th scope="col">Login</th>
+        <th scope="col">Role</th>
+        <th scope="col">Status</th>
+        <th scope="col">Last Login</th>
+        <th scope="col">Data</th>
+        <th scope="col" class="actions-column">Actions</th>
+      </tr>
+      </thead>
 
-    <tbody>
+      <tbody>
       <tr *ngFor="let user of users">
-        <td>{{user.login}}</td>
+        <td class="text-truncate" placement="left" data-container="body" [ngbTooltip]="user.login">{{user.login}}</td>
         <td>{{userRole[user.role]}}</td>
         <td>{{userStatus[user.status]}}</td>
         <td>{{user.lastLogin | date:'medium'}}</td>
@@ -23,8 +24,9 @@
           <button class="btn btn-danger btn-sm" (click)="deleteUser(user)">Delete</button>
         </td>
       </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 
   <!--<nav>-->
     <!--<ul class="pagination justify-content-center">-->
@@ -40,7 +42,7 @@
     <!--</ul>-->
   <!--</nav>-->
 
-  <button class="btn btn-success float-right" (click)="openNewUserModal(newUserModal)">Add new user</button>
+  <button class="btn btn-success float-right btn-add" (click)="openNewUserModal(newUserModal)">Add new user</button>
 </div>
 
 <ng-template #newUserModal let-c="close" let-d="dismiss">
