--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
+<nav class="navbar navbar-dark bg-dark">
   <a class="navbar-brand" href="#">DeviceHive</a>
 </nav>
 
