Added error messages to login and users

--- a/src/app/admin/users/user/user.component.html
+++ b/src/app/admin/users/user/user.component.html
@@ -31,5 +31,5 @@
 
 <div class="form-group">
   <label for="textAreaData">Data (json)</label>
-  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="userDataValue"></textarea>
+  <textarea class="form-control" id="textAreaData" rows="3" [(ngModel)]="user.data"></textarea>
 </div>
